--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,10 @@
 			<artifactId>cours-ix-data</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 </project>
